--- a/estiloCal.css
+++ b/estiloCal.css
@@ -21,15 +21,16 @@ body {
 }
 .container {
   margin-top: 4%;
-  margin: 14%;
+ 
   border: 2px solid gray;
-  width: 450px;
+  width: 400px;
   height: 380px;
   border-radius: 10px; 
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: rgba(200, 198, 198, 0.388);
+   margin:0 4%;
   
 }
 #scren{
