--- a/estiloCal.css
+++ b/estiloCal.css
@@ -21,7 +21,6 @@ body {
 }
 .container {
   margin-top: 4%;
- 
   border: 2px solid gray;
   width: 400px;
   height: 380px;
@@ -30,7 +29,7 @@ body {
   align-items: center;
   flex-direction: column;
   background-color: rgba(200, 198, 198, 0.388);
-   margin:0 4%;
+   margin:20px 4%;
   
 }
 #scren{
