--- a/estiloCal.css
+++ b/estiloCal.css
@@ -20,15 +20,16 @@ body {
   
 }
 .container {
-  margin-top: 4%;
+
   border: 2px solid gray;
-  width: 450px;
+  width: 80%;
   height: 380px;
   border-radius: 10px; 
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: rgba(200, 198, 198, 0.388);
+  margin: 20% 0;
   
 }
 #scren{
