--- a/estiloCal.css
+++ b/estiloCal.css
@@ -30,6 +30,7 @@ body {
   flex-direction: column;
   background-color: rgba(200, 198, 198, 0.388);
   margin: 20% 0;
+  padding: 2%;
   
 }
 #scren{
@@ -52,7 +53,8 @@ body {
     margin: 4px;
     height: auto;
     border: 3px outset black;
- 
+    border-radius: 10px;
+    padding: 1%;
 }
 .botones:active:not(.igual,.borrar) {
   border: 2px inset black;
